@@ -5,45 +5,38 @@ import sun.misc.BASE64Encoder;
 
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
+import java.util.Base64;
 
 public class Base64Crypt {
 
     public static String encode(String s, String key) {
-        try {
-            return base64Encode(xorWithKey(s.getBytes("UTF-8"), key.getBytes("UTF-8")));
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return null;
+        return base64Encode(xorWithKey(s.getBytes(), key.getBytes()));
     }
 
     public static String decode(String s, String key) {
-        try {
-            return new String(xorWithKey(base64Decode(new String(s.getBytes("UTF-8"))), key.getBytes("UTF-8")));
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
-        return null;
+        return new String(xorWithKey(base64Decode(s), key.getBytes()));
+
     }
 
     public static byte[] xorWithKey(byte[] a, byte[] key) {
         byte[] out = new byte[a.length];
         for (int i = 0; i < a.length; i++) {
-            out[i] = (byte) (a[i] ^ key[i%key.length]);
+            out[i] = (byte) (a[i] ^ key[i % key.length]);
         }
         return out;
     }
 
-    private static byte[] base64Decode(String s) {
-        try {
-            BASE64Decoder d = new BASE64Decoder();
-            return d.decodeBuffer(s);
-        } catch (IOException e) {throw new RuntimeException(e);}
+    public static byte[] base64Decode(String s) {
+//        try {
+//            BASE64Decoder d = new BASE64Decoder();
+//            return d.decodeBuffer(s);
+//        } catch (IOException e) {throw new RuntimeException(e);}
+        return Base64.getDecoder().decode(s);
     }
 
-    private static String base64Encode(byte[] bytes) {
-        BASE64Encoder enc = new BASE64Encoder();
-        return enc.encode(bytes).replaceAll("\\s", "");
-
+    public static String base64Encode(byte[] bytes) {
+//        BASE64Encoder enc = new BASE64Encoder();
+//        return enc.encode(bytes).replaceAll("\\s", "");
+        return Base64.getEncoder().encodeToString(bytes);
     }
 }
